# stc_task

./: CMakeLists.txt  main_qt.cpp
qt_app/: crc_32.cpp  crc_32.hpp  employee.cpp  employee.hpp  main_wgt.cpp  main_wgt.hpp  person.cpp  person.hpp
